--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^1.1.5",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
+    "@fontsource/atkinson-hyperlegible": "^5.0.17",
     "astro": "^3.5.5",
     "typescript": "^5.2.2"
   }
